--- a/Stylesheet/community.css
+++ b/Stylesheet/community.css
@@ -531,6 +531,7 @@ body {
 
   .community-header {
     padding: 60px 15px;
+    margin-top:30px;
   }
   .community-header h1 {
     font-size: 2.2rem;
