--- a/Stylesheet/men.css
+++ b/Stylesheet/men.css
@@ -1262,12 +1262,12 @@ body.modal-open {
   left: 50%;
   transform: translate(-50%, -50%);
   background: #fff;
-  padding: 10px;
+  padding:30px 10px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   z-index: 10000;
   max-width: 600px;
-  width: 90%;
+  width: 100%;
   max-height: 100vh;
   /* overflow: hidden; */
   overflow-y: scroll;
