--- a/Stylesheet/men.css
+++ b/Stylesheet/men.css
@@ -1266,11 +1266,12 @@ body.modal-open {
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   z-index: 10000;
-  max-width: 600px;
+  max-width: 700px;
   width: 100%;
   max-height: 100vh;
   /* overflow: hidden; */
   overflow-y: scroll;
+  overflow-x: hidden;
   animation: fadeIn 0.3s ease-out;
 }
 
